# rofi-json-menu

./: CMakeLists.txt  Makefile.am  PKGBUILD  README.md  configure.ac
src/: jsonmenu.c
